Updated the CSS

--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ ul {
 
 li {
   display: inline;
-  padding-right: 5px;
+  padding-right: 10px;
   font-size: 16px;
   font-weight: 400;
   line-height: 25px;
@@ -25,6 +25,15 @@ li {
 
 li:first-letter {
   text-transform: capitalize;
+}
+
+a {
+  color: #9d9da3;
+}
+
+a:hover {
+  text-decoration: none;
+  color: #bdbdc0;
 }
 
 .container {
@@ -36,9 +45,10 @@ li:first-letter {
 }
 
 .weather-app {
-  padding: 40px;
+  padding: 40px 40px 50px 40px;
   border: 1px solid #dadde1;
   border-radius: 5px;
+  background: #cfe0e6;
 }
 
 .overview {
@@ -63,6 +73,13 @@ li:first-letter {
   font-size: 64px;
   line-height: 1;
   font-weight: 400;
+  font-family: "Playfair Display", serif;
+  position: relative;
+  top: -10px;
+}
+
+.units {
+  padding-left: 5px;
 }
 
 .weather-temperature .units {
